# umr_ws

./: README.md
umr_interfaces/: CMakeLists.txt  package.xml
umr_interfaces/action/: ComputePath.action
umr_interfaces/msg/: BoundingBox2D.msg  Detection.msg  DetectionArray.msg  DispatchResult.msg  DispatchTask.msg  Goals.msg  LidarInfo.msg  MotionCommand.msg  Phase.msg  PhaseResult.msg
umr_navigation/umr_lidar/: package.xml  setup.cfg  setup.py
umr_navigation/umr_lidar/umr_lidar/: lidar_obstacle_detector.py
umr_navigation/umr_lidar/umr_lidar/lib/: lidar_perception_func_lib.py
umr_navigation/umr_planner/: package.xml  setup.cfg  setup.py
umr_navigation/umr_planner/config/: waypoints.yaml
umr_navigation/umr_planner/umr_planner/: goal_executor.py  motion_code_enums.py  motion_planner.py  phase_interpreter.py
umr_navigation/umr_planner/umr_planner/lib/: phase_interpreter_func_lib.py
umr_navigation/umr_tasks/: package.xml  setup.cfg  setup.py
umr_navigation/umr_tasks/umr_tasks/: task_manager.py  task_server.py
umr_simulations/umr_simulations/: package.xml  setup.cfg  setup.py
umr_simulations/umr_simulations/umr_simulations/: dispatch_go_to_place.py
